Open external GitHub links in new tabs

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,7 +16,9 @@
         <ul>
           <li><a href="/specs">Specifications</a></li>
           <li><a href="/docs">Documentation</a></li>
-          <li><a href="https://github.com/journalfoundation">GitHub</a></li>
+          <li>
+            <a href="https://github.com/journalfoundation" target="_blank" rel="noopener noreferrer">GitHub</a>
+          </li>
           <li><a href="/security">Security</a></li>
         </ul>
       </div>
