--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,6 +17,7 @@ const currentPath = Astro.url.pathname;
         <li><a href="/blog" class:list={[{ active: currentPath.startsWith('/blog') }]}>Blog</a></li>
         <li><a href="/podcast" class:list={[{ active: currentPath.startsWith('/podcast') }]}>Podcast</a></li>
         <li><a href="/governance" class:list={[{ active: currentPath === '/governance' }]}>Governance</a></li>
+        <li><a href="/security" class:list={[{ active: currentPath === '/security' }]}>Security</a></li>
       </ul>
     </div>
   </nav>
