--- a/src/pages/governance.astro
+++ b/src/pages/governance.astro
@@ -184,8 +184,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
         <ul>
           <li><strong>General inquiries:</strong> hello@journalfoundation.org</li>
           <li><strong>Governance questions:</strong> governance@journalfoundation.org</li>
-          <li><strong>Financial transparency:</strong> transparency@journalfoundation.org</li>
-          <li><strong>Anonymous tips:</strong> Signal +1-XXX-XXX-XXXX</li>
+          <li><strong>Anonymous tips:</strong> Signal +1-281-532-5205</li>
         </ul>
       </div>
       
